syntax = "proto3";

package brbdxrpb;

option go_package = "github.com/filecoin-project/mir/pkg/pb/brbdxrpb";

import "mir/codegen_extensions.proto";
import "net/codegen_extensions.proto";

// ============================================================
// Net Messages
// ============================================================

message Message {
  option (net.message_class) = true;

  oneof type {
    option (net.message_type) = true;

    StartMessage start_message = 1;
    EchoMessage echo_message = 2;
    ReadyMessage ready_message = 3;
  }
}

message StartMessage {
  option (net.message) = true;

  int64 id   = 1;
  int64 n   = 2;
  bytes data = 3;
}


message EchoMessage {
  option (net.message) = true;

  int64 id    = 1;
  int64 n    = 2;
  bytes hash  = 3;
  bytes chunk = 4;
}

message ReadyMessage {
  option (net.message) = true;

  int64 id    = 1;
  int64 n    = 2;
  bytes hash  = 3;
  bytes chunk = 4;
}
